# QueryCraft

./: .gitignore  CMakeLists.txt  README.md  main.cpp
ui/: ConnectionWindow.cpp  ConnectionWindow.h  MainWindow.cpp  MainWindow.h
